--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -9,6 +9,7 @@
     opacity: 0
     transition: .3s ease
     -webkit-transition: .3s ease
+    z-index: 9999
 
     .__close
         position: absolute
